--- a/11-Training_Deep_Neural_Networks.ipynb
+++ b/11-Training_Deep_Neural_Networks.ipynb
@@ -1260,6 +1260,393 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_A.save(\"my_model_A.h5\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_B = keras.models.Sequential()\n",
+    "model_B.add(keras.layers.Flatten(input_shape=[28, 28]))\n",
+    "for n_hidden in (300, 100, 50, 50, 50):\n",
+    "    model_B.add(keras.layers.Dense(n_hidden, activation=\"selu\"))\n",
+    "model_B.add(keras.layers.Dense(1, activation=\"sigmoid\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_B.compile(loss=\"binary_crossentropy\",\n",
+    "                optimizer=keras.optimizers.SGD(learning_rate=1e-3),\n",
+    "                metrics=[\"accuracy\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-18 20:59:36.587154: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7/7 [==============================] - ETA: 0s - loss: 0.6038 - accuracy: 0.6600"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-18 20:59:40.155686: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7/7 [==============================] - 6s 502ms/step - loss: 0.6038 - accuracy: 0.6600 - val_loss: 0.5178 - val_accuracy: 0.7647\n",
+      "Epoch 2/20\n",
+      "7/7 [==============================] - 1s 125ms/step - loss: 0.4535 - accuracy: 0.8200 - val_loss: 0.4129 - val_accuracy: 0.8519\n",
+      "Epoch 3/20\n",
+      "7/7 [==============================] - 1s 124ms/step - loss: 0.3600 - accuracy: 0.8950 - val_loss: 0.3407 - val_accuracy: 0.9067\n",
+      "Epoch 4/20\n",
+      "7/7 [==============================] - 1s 146ms/step - loss: 0.2960 - accuracy: 0.9350 - val_loss: 0.2901 - val_accuracy: 0.9361\n",
+      "Epoch 5/20\n",
+      "7/7 [==============================] - 1s 120ms/step - loss: 0.2506 - accuracy: 0.9550 - val_loss: 0.2534 - val_accuracy: 0.9483\n",
+      "Epoch 6/20\n",
+      "7/7 [==============================] - 1s 142ms/step - loss: 0.2165 - accuracy: 0.9500 - val_loss: 0.2252 - val_accuracy: 0.9615\n",
+      "Epoch 7/20\n",
+      "7/7 [==============================] - 1s 161ms/step - loss: 0.1910 - accuracy: 0.9650 - val_loss: 0.2031 - val_accuracy: 0.9686\n",
+      "Epoch 8/20\n",
+      "7/7 [==============================] - 1s 133ms/step - loss: 0.1700 - accuracy: 0.9750 - val_loss: 0.1854 - val_accuracy: 0.9746\n",
+      "Epoch 9/20\n",
+      "7/7 [==============================] - 1s 133ms/step - loss: 0.1536 - accuracy: 0.9700 - val_loss: 0.1698 - val_accuracy: 0.9828\n",
+      "Epoch 10/20\n",
+      "7/7 [==============================] - 1s 116ms/step - loss: 0.1389 - accuracy: 0.9850 - val_loss: 0.1575 - val_accuracy: 0.9838\n",
+      "Epoch 11/20\n",
+      "7/7 [==============================] - 1s 103ms/step - loss: 0.1271 - accuracy: 0.9900 - val_loss: 0.1463 - val_accuracy: 0.9838\n",
+      "Epoch 12/20\n",
+      "7/7 [==============================] - 1s 106ms/step - loss: 0.1166 - accuracy: 0.9950 - val_loss: 0.1372 - val_accuracy: 0.9848\n",
+      "Epoch 13/20\n",
+      "7/7 [==============================] - 1s 106ms/step - loss: 0.1078 - accuracy: 1.0000 - val_loss: 0.1289 - val_accuracy: 0.9848\n",
+      "Epoch 14/20\n",
+      "7/7 [==============================] - 1s 125ms/step - loss: 0.0998 - accuracy: 0.9950 - val_loss: 0.1219 - val_accuracy: 0.9848\n",
+      "Epoch 15/20\n",
+      "7/7 [==============================] - 1s 127ms/step - loss: 0.0928 - accuracy: 0.9950 - val_loss: 0.1157 - val_accuracy: 0.9858\n",
+      "Epoch 16/20\n",
+      "7/7 [==============================] - 1s 110ms/step - loss: 0.0869 - accuracy: 0.9950 - val_loss: 0.1104 - val_accuracy: 0.9858\n",
+      "Epoch 17/20\n",
+      "7/7 [==============================] - 1s 104ms/step - loss: 0.0818 - accuracy: 0.9950 - val_loss: 0.1056 - val_accuracy: 0.9858\n",
+      "Epoch 18/20\n",
+      "7/7 [==============================] - 1s 108ms/step - loss: 0.0772 - accuracy: 0.9950 - val_loss: 0.1015 - val_accuracy: 0.9858\n",
+      "Epoch 19/20\n",
+      "7/7 [==============================] - 1s 106ms/step - loss: 0.0729 - accuracy: 0.9950 - val_loss: 0.0975 - val_accuracy: 0.9858\n",
+      "Epoch 20/20\n",
+      "7/7 [==============================] - 1s 104ms/step - loss: 0.0690 - accuracy: 0.9950 - val_loss: 0.0939 - val_accuracy: 0.9858\n"
+     ]
+    }
+   ],
+   "source": [
+    "history = model_B.fit(X_train_B, y_train_B, epochs=20,\n",
+    "                      validation_data=(X_valid_B, y_valid_B))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_7\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " flatten_7 (Flatten)         (None, 784)               0         \n",
+      "                                                                 \n",
+      " dense_224 (Dense)           (None, 300)               235500    \n",
+      "                                                                 \n",
+      " dense_225 (Dense)           (None, 100)               30100     \n",
+      "                                                                 \n",
+      " dense_226 (Dense)           (None, 50)                5050      \n",
+      "                                                                 \n",
+      " dense_227 (Dense)           (None, 50)                2550      \n",
+      "                                                                 \n",
+      " dense_228 (Dense)           (None, 50)                2550      \n",
+      "                                                                 \n",
+      " dense_229 (Dense)           (None, 1)                 51        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 275,801\n",
+      "Trainable params: 275,801\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_B.summary()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_A = keras.models.load_model(\"my_model_A.h5\")\n",
+    "model_B_on_A = keras.models.Sequential(model_A.layers[:-1])\n",
+    "model_B_on_A.add(keras.layers.Dense(1, activation=\"sigmoid\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_A_clone = keras.models.clone_model(model_A)\n",
+    "model_A_clone.set_weights(model_A.get_weights())\n",
+    "model_B_on_A = keras.models.Sequential(model_A_clone.layers[:-1])\n",
+    "model_B_on_A.add(keras.layers.Dense(1, activation=\"sigmoid\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for layer in model_B_on_A.layers[:-1]:\n",
+    "    layer.trainable = False\n",
+    "\n",
+    "model_B_on_A.compile(loss=\"binary_crossentropy\",\n",
+    "                     optimizer=keras.optimizers.SGD(learning_rate=1e-3),\n",
+    "                     metrics=[\"accuracy\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-18 21:00:26.033989: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7/7 [==============================] - ETA: 0s - loss: 1.6173 - accuracy: 0.1050"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-18 21:00:28.412943: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7/7 [==============================] - 4s 417ms/step - loss: 1.6173 - accuracy: 0.1050 - val_loss: 1.5212 - val_accuracy: 0.1024\n",
+      "Epoch 2/4\n",
+      "7/7 [==============================] - 1s 119ms/step - loss: 1.5190 - accuracy: 0.1250 - val_loss: 1.4307 - val_accuracy: 0.1187\n",
+      "Epoch 3/4\n",
+      "7/7 [==============================] - 1s 198ms/step - loss: 1.4257 - accuracy: 0.1400 - val_loss: 1.3456 - val_accuracy: 0.1359\n",
+      "Epoch 4/4\n",
+      "7/7 [==============================] - 1s 114ms/step - loss: 1.3380 - accuracy: 0.1400 - val_loss: 1.2661 - val_accuracy: 0.1542\n",
+      "Epoch 1/16\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-18 21:00:33.218308: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7/7 [==============================] - ETA: 0s - loss: 1.0751 - accuracy: 0.2800"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-18 21:00:35.207729: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7/7 [==============================] - 4s 335ms/step - loss: 1.0751 - accuracy: 0.2800 - val_loss: 0.7959 - val_accuracy: 0.5193\n",
+      "Epoch 2/16\n",
+      "7/7 [==============================] - 1s 121ms/step - loss: 0.6943 - accuracy: 0.5750 - val_loss: 0.5707 - val_accuracy: 0.7170\n",
+      "Epoch 3/16\n",
+      "7/7 [==============================] - 1s 195ms/step - loss: 0.4950 - accuracy: 0.7700 - val_loss: 0.4378 - val_accuracy: 0.8327\n",
+      "Epoch 4/16\n",
+      "7/7 [==============================] - 1s 129ms/step - loss: 0.3750 - accuracy: 0.8900 - val_loss: 0.3534 - val_accuracy: 0.8874\n",
+      "Epoch 5/16\n",
+      "7/7 [==============================] - 1s 124ms/step - loss: 0.2978 - accuracy: 0.9600 - val_loss: 0.2971 - val_accuracy: 0.9148\n",
+      "Epoch 6/16\n",
+      "7/7 [==============================] - 1s 112ms/step - loss: 0.2460 - accuracy: 0.9650 - val_loss: 0.2576 - val_accuracy: 0.9331\n",
+      "Epoch 7/16\n",
+      "7/7 [==============================] - 1s 103ms/step - loss: 0.2103 - accuracy: 0.9800 - val_loss: 0.2296 - val_accuracy: 0.9442\n",
+      "Epoch 8/16\n",
+      "7/7 [==============================] - 1s 123ms/step - loss: 0.1845 - accuracy: 0.9800 - val_loss: 0.2063 - val_accuracy: 0.9473\n",
+      "Epoch 9/16\n",
+      "7/7 [==============================] - 1s 143ms/step - loss: 0.1636 - accuracy: 0.9800 - val_loss: 0.1864 - val_accuracy: 0.9584\n",
+      "Epoch 10/16\n",
+      "7/7 [==============================] - 1s 118ms/step - loss: 0.1461 - accuracy: 0.9850 - val_loss: 0.1709 - val_accuracy: 0.9635\n",
+      "Epoch 11/16\n",
+      "7/7 [==============================] - 1s 136ms/step - loss: 0.1323 - accuracy: 0.9850 - val_loss: 0.1588 - val_accuracy: 0.9686\n",
+      "Epoch 12/16\n",
+      "7/7 [==============================] - 1s 156ms/step - loss: 0.1215 - accuracy: 0.9850 - val_loss: 0.1488 - val_accuracy: 0.9726\n",
+      "Epoch 13/16\n",
+      "7/7 [==============================] - 1s 145ms/step - loss: 0.1125 - accuracy: 0.9850 - val_loss: 0.1405 - val_accuracy: 0.9757\n",
+      "Epoch 14/16\n",
+      "7/7 [==============================] - 1s 108ms/step - loss: 0.1053 - accuracy: 0.9850 - val_loss: 0.1332 - val_accuracy: 0.9777\n",
+      "Epoch 15/16\n",
+      "7/7 [==============================] - 1s 105ms/step - loss: 0.0988 - accuracy: 0.9900 - val_loss: 0.1262 - val_accuracy: 0.9767\n",
+      "Epoch 16/16\n",
+      "7/7 [==============================] - 1s 151ms/step - loss: 0.0929 - accuracy: 0.9900 - val_loss: 0.1207 - val_accuracy: 0.9767\n"
+     ]
+    }
+   ],
+   "source": [
+    "history = model_B_on_A.fit(X_train_B, y_train_B, epochs=4,\n",
+    "                           validation_data=(X_valid_B, y_valid_B))\n",
+    "\n",
+    "for layer in model_B_on_A.layers[:-1]:\n",
+    "    layer.trainable = True\n",
+    "\n",
+    "model_B_on_A.compile(loss=\"binary_crossentropy\",\n",
+    "                     optimizer=keras.optimizers.SGD(learning_rate=1e-3),\n",
+    "                     metrics=[\"accuracy\"])\n",
+    "history = model_B_on_A.fit(X_train_B, y_train_B, epochs=16,\n",
+    "                           validation_data=(X_valid_B, y_valid_B))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "63/63 [==============================] - 2s 24ms/step - loss: 0.0885 - accuracy: 0.9860\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.08846136182546616, 0.9860000014305115]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_B.evaluate(X_test_B, y_test_B)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "63/63 [==============================] - 2s 23ms/step - loss: 0.1186 - accuracy: 0.9800\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.11859899014234543, 0.9800000190734863]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_B_on_A.evaluate(X_test_B, y_test_B)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.4285714285714228"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(100 - 98.00) / (100 - 98.60)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
