--- a/11-Training_Deep_Neural_Networks.ipynb
+++ b/11-Training_Deep_Neural_Networks.ipynb
@@ -1836,7 +1836,23 @@
      "text": [
       "1719/1719 [==============================] - 33s 18ms/step - loss: 0.4898 - accuracy: 0.8269 - val_loss: 0.4049 - val_accuracy: 0.8584\n",
       "Epoch 2/10\n",
-      " 331/1719 [====>.........................] - ETA: 24s - loss: 0.3962 - accuracy: 0.8597"
+      "1719/1719 [==============================] - 32s 18ms/step - loss: 0.3808 - accuracy: 0.8660 - val_loss: 0.3727 - val_accuracy: 0.8694\n",
+      "Epoch 3/10\n",
+      "1719/1719 [==============================] - 36s 21ms/step - loss: 0.3484 - accuracy: 0.8762 - val_loss: 0.3755 - val_accuracy: 0.8688\n",
+      "Epoch 4/10\n",
+      "1719/1719 [==============================] - 30s 17ms/step - loss: 0.3281 - accuracy: 0.8830 - val_loss: 0.3506 - val_accuracy: 0.8782\n",
+      "Epoch 5/10\n",
+      "1719/1719 [==============================] - 35s 20ms/step - loss: 0.3132 - accuracy: 0.8887 - val_loss: 0.3452 - val_accuracy: 0.8776\n",
+      "Epoch 6/10\n",
+      "1719/1719 [==============================] - 32s 19ms/step - loss: 0.2999 - accuracy: 0.8938 - val_loss: 0.3425 - val_accuracy: 0.8818\n",
+      "Epoch 7/10\n",
+      "1719/1719 [==============================] - 34s 20ms/step - loss: 0.2900 - accuracy: 0.8972 - val_loss: 0.3360 - val_accuracy: 0.8804\n",
+      "Epoch 8/10\n",
+      "1719/1719 [==============================] - 34s 20ms/step - loss: 0.2810 - accuracy: 0.9009 - val_loss: 0.3411 - val_accuracy: 0.8804\n",
+      "Epoch 9/10\n",
+      "1719/1719 [==============================] - 33s 19ms/step - loss: 0.2729 - accuracy: 0.9033 - val_loss: 0.3313 - val_accuracy: 0.8828\n",
+      "Epoch 10/10\n",
+      "1719/1719 [==============================] - 32s 19ms/step - loss: 0.2659 - accuracy: 0.9061 - val_loss: 0.3260 - val_accuracy: 0.8846\n"
      ]
     }
    ],
