--- a/11-Training_Deep_Neural_Networks.ipynb
+++ b/11-Training_Deep_Neural_Networks.ipynb
@@ -1924,7 +1924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1936,6 +1936,18 @@
     "])\n",
     "model.compile(loss=\"sparse_categorical_crossentropy\", optimizer=\"nadam\", metrics=[\"accuracy\"])\n",
     "n_epochs = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr_scheduler = keras.callbacks.LearningRateScheduler(exponential_decay_fn)\n",
+    "history = model.fit(X_train_scaled, y_train, epochs=n_epochs,\n",
+    "                    validation_data=(X_valid_scaled, y_valid),\n",
+    "                    callbacks=[lr_scheduler])"
    ]
   },
   {
