--- a/11-Training_Deep_Neural_Networks.ipynb
+++ b/11-Training_Deep_Neural_Networks.ipynb
@@ -1942,7 +1942,29 @@
    "cell_type": "code",
    "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-29 22:13:35.844685: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 187/1719 [==>...........................] - ETA: 1:31 - loss: 1.2426 - accuracy: 0.7211"
+     ]
+    }
+   ],
    "source": [
     "lr_scheduler = keras.callbacks.LearningRateScheduler(exponential_decay_fn)\n",
     "history = model.fit(X_train_scaled, y_train, epochs=n_epochs,\n",
