--- a/11-Training_Deep_Neural_Networks.ipynb
+++ b/11-Training_Deep_Neural_Networks.ipynb
@@ -1961,7 +1961,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 187/1719 [==>...........................] - ETA: 1:31 - loss: 1.2426 - accuracy: 0.7211"
+      " 507/1719 [=======>......................] - ETA: 1:10 - loss: 0.8827 - accuracy: 0.7600"
      ]
     }
    ],
