--- a/11-Training_Deep_Neural_Networks.ipynb
+++ b/11-Training_Deep_Neural_Networks.ipynb
@@ -1961,7 +1961,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 507/1719 [=======>......................] - ETA: 1:10 - loss: 0.8827 - accuracy: 0.7600"
+      "1719/1719 [==============================] - ETA: 0s - loss: 0.7607 - accuracy: 0.7782"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-09-29 22:15:10.721621: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1719/1719 [==============================] - 99s 54ms/step - loss: 0.7607 - accuracy: 0.7782 - val_loss: 0.8359 - val_accuracy: 0.7758 - lr: 0.0100\n",
+      "Epoch 2/10\n",
+      " 992/1719 [================>.............] - ETA: 34s - loss: 0.6368 - accuracy: 0.8057"
      ]
     }
    ],
