--- a/11-Training_Deep_Neural_Networks.ipynb
+++ b/11-Training_Deep_Neural_Networks.ipynb
@@ -1977,7 +1977,23 @@
      "text": [
       "1719/1719 [==============================] - 99s 54ms/step - loss: 0.7607 - accuracy: 0.7782 - val_loss: 0.8359 - val_accuracy: 0.7758 - lr: 0.0100\n",
       "Epoch 2/10\n",
-      " 992/1719 [================>.............] - ETA: 34s - loss: 0.6368 - accuracy: 0.8057"
+      "1719/1719 [==============================] - 85s 49ms/step - loss: 0.6815 - accuracy: 0.7969 - val_loss: 0.6213 - val_accuracy: 0.8088 - lr: 0.0089\n",
+      "Epoch 3/10\n",
+      "1719/1719 [==============================] - 81s 47ms/step - loss: 0.6126 - accuracy: 0.8134 - val_loss: 0.6123 - val_accuracy: 0.8182 - lr: 0.0079\n",
+      "Epoch 4/10\n",
+      "1719/1719 [==============================] - 86s 50ms/step - loss: 0.5365 - accuracy: 0.8352 - val_loss: 0.5501 - val_accuracy: 0.8220 - lr: 0.0071\n",
+      "Epoch 5/10\n",
+      "1719/1719 [==============================] - 93s 54ms/step - loss: 0.5379 - accuracy: 0.8355 - val_loss: 0.5909 - val_accuracy: 0.8368 - lr: 0.0063\n",
+      "Epoch 6/10\n",
+      "1719/1719 [==============================] - 94s 55ms/step - loss: 0.4714 - accuracy: 0.8514 - val_loss: 0.7226 - val_accuracy: 0.8576 - lr: 0.0056\n",
+      "Epoch 7/10\n",
+      "1719/1719 [==============================] - 91s 53ms/step - loss: 0.4460 - accuracy: 0.8615 - val_loss: 0.5210 - val_accuracy: 0.8550 - lr: 0.0050\n",
+      "Epoch 8/10\n",
+      "1719/1719 [==============================] - 92s 53ms/step - loss: 0.3950 - accuracy: 0.8715 - val_loss: 0.5104 - val_accuracy: 0.8368 - lr: 0.0045\n",
+      "Epoch 9/10\n",
+      "1719/1719 [==============================] - 84s 49ms/step - loss: 0.3769 - accuracy: 0.8789 - val_loss: 0.4650 - val_accuracy: 0.8598 - lr: 0.0040\n",
+      "Epoch 10/10\n",
+      "1719/1719 [==============================] - 82s 48ms/step - loss: 0.3419 - accuracy: 0.8875 - val_loss: 0.4916 - val_accuracy: 0.8736 - lr: 0.0035\n"
      ]
     }
    ],
